<resources>
    <string name="app_name">Barmand</string>
    <string name="calendar">Calendar</string>
    <string name="tables">Tables</string>
    <string name="account">Account</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerhere">Register here</string>
    <string name="Calendar">Calendar</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome restaurant organizer application</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="Item_name">Item name</string>
    <string name="Item_description">Item description</string>
    <string name="Item_price">Item price</string>
    <string name="item_discount">Item discount</string>
    <string name="delete_item">Delete item</string>
    <string name="add_table">Add table</string>
    <string name="add_table_id">add_table_id</string>
    <string name="occupied">Is Occupied</string>
    <string name="add_employee">Add employee</string>
    <string name="add_employee_role">Employee Role</string>
    <string name="emp_role">Employee role</string>
    <string name="add_emp_name">Employee name</string>
    <string name="add_customer_name">Customer name</string>
    <string name="add_customer_cc">Credit card</string>
    <string name="email">Email</string>
    <string name="schedule_date">Schedule date ( format dd/mm/yyyy )</string>
    <string name="schedule_start">Start hour</string>
    <string name="schedule_end">End hours</string>
    <string name="add_employees_to_sch">Add employees</string>
    <string name="select_table_text">Select Table or Scan QR</string>
    <string name="add_items">Add items</string>
    <string name="scan_table_qr">Scan Table QR</string>
    <string name="take_table">Take table</string>
    <string name="orders">Orders</string>
    <string name="items">Items</string>
    <string name="schedules">Schedules</string>
    <string name="employees">Employees</string>
    <string name="customers">Customers</string>
    <string name="logout">Logout</string>
    <string name="no_number">No Number</string>
    <string name="admin">Admin</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="hello_user">Hello user</string>
    <string name="textview">TextView</string>
    <string name="click_on_button_below_to_scan_table_qr_code_and_start_ordering">Click on button below to scan table QR code and start ordering!</string>
    <string name="your_orders">Your orders</string>
    <string name="channel_name">chanelname</string>
    <string name="no_order_available_for_this_table">No order available for this table</string>
    <string name="no_schedules_on_this_date">No schedules on this date.</string>
    <string name="create_order">Order now</string>
    <string name="order_for_later">Order for later</string>
    <string name="scanqr">ScanQR</string>
    <string name="reservation_date">Reservation date</string>
    <string name="employee_name2">Employee name</string>
</resources>