<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/tables"
        android:id="@+id/tableFragment"
        android:enabled="true"
        android:icon="@drawable/tablesicon"/>
    <item
        android:title="Notifications"
        android:id="@+id/notificationFragment"
        android:enabled="true"
        android:icon="@drawable/bell"
        tools:ignore="HardcodedText" />
    <item
        android:title="@string/schedules"
        android:id="@+id/calendarFragment"
        android:enabled="true"
        android:icon="@drawable/scheduleicon"/>
    <item
        android:title="@string/admin"
        android:id="@+id/adminFragment"
        android:enabled="true"
        android:icon="@drawable/usersettings"/>

</menu>