<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customerContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:padding="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/customerTitle"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/customerEmail"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/email"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/customerCreditCard"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:text="@string/add_customer_cc"
        android:textSize="24sp" />

</RelativeLayout>